nobase_include_HEADERS = brica2/buffer.hpp \
                         brica2/component.hpp \
                         brica2/executor.hpp \
                         brica2/format.hpp \
                         brica2/port.hpp \
                         brica2/scheduler.hpp \
                         brica2/sorted_map.hpp \
                         brica2/typedef.h \
                         brica2/type_traits.hpp \
                         brica2/mpi.hpp \
                         brica2/mpi/component.hpp \
                         brica2/mpi/datatype.hpp \
                         brica2/mpi/executor.hpp \
                         brica2/brica2.hpp

noinst_HEADERS = catch.hpp
