nobase_include_HEADERS = brica2/assert.hpp \
                         brica2/brica2.hpp \
                         brica2/buffer.hpp \
                         brica2/component.hpp \
                         brica2/executor.hpp \
                         brica2/executor/omp.hpp \
                         brica2/executor/parallel.hpp \
                         brica2/executor/serial.hpp \
                         brica2/executors.hpp \
                         brica2/format.hpp \
                         brica2/logger.hpp \
                         brica2/mpi.hpp \
                         brica2/mpi/component.hpp \
                         brica2/mpi/datatype.hpp \
                         brica2/mpi/executor.hpp \
                         brica2/mpi/instance.hpp \
                         brica2/port.hpp \
                         brica2/scheduler.hpp \
                         brica2/sorted_map.hpp \
                         brica2/span.hpp \
                         brica2/thread_pool.hpp \
                         brica2/type_traits.hpp

noinst_HEADERS = catch.hpp
