noinst_bin_PROGRAMS = brica_test
noinst_bindir = $(top_builddir)/tests
brica_test_SOURCES = type_traits.cpp \
                     sorted_map.cpp \
                     buffer.cpp \
                     executor.cpp \
                     component.cpp \
                     scheduler.cpp \
                     main.cpp

brica_test_CPPFLAGS = -I$(top_srcdir)/include
